Fixed issue with volume slider where the min-fill jumped position, fixed issue with seek bar so that the head starts in the correct place

--- a/stylesheets/internal_ui.css
+++ b/stylesheets/internal_ui.css
@@ -129,7 +129,8 @@
     border-radius: 0px;
     cursor: pointer;
     height: 8px;
-    top: -3px;
+    left: 0px;
+    top: -6px;
 }
  
 ._controls ._timeline ._max-label {
@@ -236,7 +237,7 @@
     border: none;
     display: block;
     position: absolute;
-    bottom: 0px;
+    top: -1px;
     width: 5px;
     margin-bottom: 0px;
     margin-left: 1px;
